pic et legendes

--- a/aide.html
+++ b/aide.html
@@ -111,7 +111,9 @@
                         </ul>
 
                     </div>
+                © J.C Domenach
                 </div>
+
             </div>
  <p align="left"> La socièté des amis soutient par ailleurs l'édition des <b>ouvrages</b> des<br>  chercheurs du Musée. C'est ce qu'elle vient de faire en aidant la publication <br> du livre de <b>Patrick Paillet</b>, maitre de conférence au Musée de l'Homme,<br> sur  "L'art des objets de la préhistoire." (Edition Errance 2014)</p>
  <br>
