--- a/avantages.html
+++ b/avantages.html
@@ -96,7 +96,7 @@
                             en cours et pour l'année suivante.</p>
                     </div>
                     <div class="box">
-                        <p class="title">Si je souhaite que mon conjoint bénéficie des avantages que procure l'adhésion à la SAMH , dis-je adhérer et donc cotiser pour deux personnes ?</p>
+                        <p class="title">Si je souhaite que mon conjoint bénéficie des avantages que procure l'adhésion à la SAMH , dois-je adhérer et donc cotiser pour deux personnes ?</p>
                         <p class="answ">
                             Oui , il faut dans ce cas prendre le tarif duo.</p>
                     </div>
@@ -128,14 +128,14 @@
                     <div class="feature">
                         <div class="img_box">
                             <a href="#">
-                                <img src="img/bateau.png" class="img-responsive">
+                                <img src="img/sable.png" class="img-responsive">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
                         </div>
                         <div class="text">
-                            <h6>Voyages </h6>
+                            <h6>Désert Waiba, Oman. © Vincent Timothée</h6>
                             <p></p>
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                             </a>
                         </div>
                         <div class="text">
-                            <h6>Conférences </h6>
+                            <h6>Hermine Xhauflair © J.C Domenach </h6>
                             <p>
                                 </p>
                         </div>
@@ -168,7 +168,7 @@
                             </a>
                         </div>
                         <div class="text">
-                            <h6>Visites </h6>
+                            <h6>Palmyre, Vincent Timothée. © Vincent Timothée</h6>
                             <p></p>
                         </div>
                     </div>
