--- a/collections.html
+++ b/collections.html
@@ -113,17 +113,23 @@
                         <ul class="slides">
                             <li>
                               <img src="img/2013-5-37 2.jpg" width="200" height="550">
+                              Masque du Vanuatu © J.C Domenach
                             </li>
                             <li>
-                              <img src="img/tambour.jpg" width="200" height="350" >
+                              <img src="img/ATT00000.jpg" width="200" height="550">
+                            © J.C Domenach
                             </li>
                              <li>
-                              <img src="img/laura2.jpg" width="200" height="550">
+                              <img src="img/KorriganeATT00000.jpg" width="200" height="550" >
+                            © J.C Domenach
                             </li>
+
                         </ul>
                     </div>
                 </div>
+
             </div>
+
         </div>
     </div>
 
