--- a/dons.html
+++ b/dons.html
@@ -99,7 +99,7 @@
                             </a>
                         </div>
                          <div class="text">
-                            <h6>Légende </h6>
+                            <h6>Dalle Saharienne, collection Maratier. <br>© Daniel Ponsart </h6>
                             <p></p>
                         </div>
 
@@ -116,7 +116,7 @@
                             </a>
                         </div>
                           <div class="text">
-                            <h6>Légende </h6>
+                            <h6>Renard-Volant, Vanuatu. <br>© J.C Domenach </h6>
                             <p></p>
                         </div>
 
@@ -133,7 +133,7 @@
                             </a>
                         </div>
                           <div class="text">
-                            <h6>Légende </h6>
+                            <h6>Coiffe de guerrier d'Amérique du Nord. <br>© J.C Domenach</h6>
                             <p></p>
                         </div>
 
@@ -205,7 +205,7 @@ de ses chercheurs , frais de mission ou édition d'ouvrages. Votre générosité
                             </a>
                         </div>
                           <div class="text">
-                            <h6>Légende </h6>
+                            <h6>Autel funéraire, Ming. Collection Bommeau. <br>© J.C Domenach </h6>
                             <p></p>
                         </div>
 
@@ -222,7 +222,7 @@ de ses chercheurs , frais de mission ou édition d'ouvrages. Votre générosité
                             </a>
                         </div>
                           <div class="text">
-                            <h6>Légende </h6>
+                            <h6> . Collection Temple. <br>© J.C Domenach </h6>
                             <p></p>
                         </div>
 
@@ -231,15 +231,15 @@ de ses chercheurs , frais de mission ou édition d'ouvrages. Votre générosité
                 <div class="col-sm-4">
                     <div class="feature last">
                         <div class="img_box">
-                            <a href="img/17010_01.JPG">
-                                <img src="img/17010_01.JPG" width="290" height="190">
+                            <a href="img/ATT00008.jpg">
+                                <img src="img/ATT00008.jpg" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
                         </div>
                           <div class="text">
-                            <h6>Légende </h6>
+                            <h6>Bracelet Berbère, collection Boland. <br>© J.C Domenach </h6>
                             <p></p>
                         </div>
 
