--- a/soutien.html
+++ b/soutien.html
@@ -94,12 +94,15 @@
                         <ul class="slides">
                            <li>
                               <img src="img/korrigane1.png" width="220" height="550">
+                              © J.C Domenach
                             </li>
                             <li>
                               <img src="img/origines.jpg" width="200" height="550">
+                              © J.C Domenach
                             </li>
                             <li>
-                              <img src="img/carrigan.jpg" width="200" height="550">
+                              <img src="img/KorriganeATT00000.jpg" width="200" height="550">
+                              © J.C Domenach
                             </li>
                         </ul>
                     </div>
