--- a/histoire.html
+++ b/histoire.html
@@ -109,7 +109,7 @@
                         </div>
                         <div class="text">
 
-                            <p>Légende
+                            <p>© J.C Domenach
                                 </p>
                         </div>
 
@@ -127,7 +127,7 @@
                         </div>
                         <div class="text">
 
-                            <p>Légende
+                            <p>© J.C Domenach
                                 </p>
                         </div>
 
@@ -146,7 +146,7 @@
                         </div>
                         <div class="text">
 
-                            <p>Légende
+                            <p>© J.C Domenach
                                 </p>
                         </div>
 
