--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     </div>
                     <div class="row copyright">
                         <div class="col-md-12">
-                            © 2015 Société des Amis du Musée de l'Homme. Tous droits réservés.
+                            © 2015 Société des Amis du Musée de l'Homme. Tous droits réservés. Site réalisé par David Wise.
                         </div>
                     </div>
                 </div>
