--- a/aide.html
+++ b/aide.html
@@ -101,17 +101,19 @@
                         <ul class="slides">
                             <li>
                               <img src="img/soutien_prix2014LG.jpeg" width="200" height="550" />
+                            Hermine Xhauflair © J.C Domenach
                             </li>
                             <li>
                               <img src="img/20150911_122508.jpg" width="200" height="550" />
+                            Jean-Pierre NGUEDE NGONO
                             </li>
                              <li>
                               <img src="img/livre_patrickpaillet.jpg" width="200" height="550"  />
+                            © J.C Domenach
                             </li>
                         </ul>
-
                     </div>
-                © J.C Domenach
+
                 </div>
 
             </div>
