--- a/aide.html
+++ b/aide.html
@@ -86,9 +86,9 @@
                     Le Musée de l'Homme est à la fois un Musée qui conserve et présente des collections au public et un établissement d'enseignement et de <b>recherche</b> sur l'évolution humaine. Afin de soutenir cette action, la Société des Amis a créé en 2008 le prix André LEROI-GOURHAN qui distingue et aide financièrement chaque année un étudiant du Muséeum national d'histoire naturelle dont le travail contribue au contenu scientifique et culturel du Musée de l'Homme.</p>
                   <p>
 
-                    <b>En 2014</b>, c'est Hermine Xhauflair (ci-contre) qui a été distinguée pour son travail sur "Le vegétal dans l'économie des chasseurs - cueilleurs préhistoriques de Palawan" aux Philippines.</p>
+                    <b>En 2014</b>, c'est Hermine Xhauflair qui a été distinguée pour son travail sur "Le vegétal dans l'économie des chasseurs - cueilleurs préhistoriques de Palawan" aux Philippines.</p>
 
-                    <b><p>En 2015</b>, le prix a été attribué à Jean-Pierre NGUEDE NGONO (ci-contre), pour son travail sur "L'adaptation et la résilience des cultures Aka et Baka face aux mutations socio-envirennementales".</p>
+                    <b><p>En 2015</b>, le prix a été attribué à Jean-Pierre NGUEDE NGONO, pour son travail sur "L'adaptation et la résilience des cultures Aka et Baka face aux mutations socio-envirennementales".</p>
 <div class="well">  <p> <b> André LEROI-GOURHAN </b> ( 1911- 1986 )
   a renouvelé nos connaissances et  notre manière de voir tant en paléontologie qu'en ethnologie ou en préhistoire que ce soit par son oeuvre ou par son enseignement , particulièrement sur le terrain. Il a marqué de son empreinte intellectuelle la seconde moitié du XXéme siécle et continue à influencer l'ensemble de la communauté des préhistoriens. <br>
   Le Musée de l'Homme a été pour André Leroi-Gourhan un lieu essentiel. C'est là qu'il a appris les fondements de la muséographie et de la technologie comparée sous la direction de Paul Rivet , de Georges-Henri Rivière et d'Anatole Levitsky. Nommé sous-directeur en en 1946 , il a succédé à Marcel Griaule à la chaire d'ethnologie générale et de préhistoire de la Sorbonne en 1956 avant d'être élu au Collège de France en 1969 .</p></div>
@@ -101,7 +101,7 @@
                         <ul class="slides">
                             <li>
                               <img src="img/soutien_prix2014LG.jpeg" width="200" height="550" />
-                            Hermine Xhauflair © J.C Domenach
+                            Hermine Xhauflair © Jean-Christophe Domenech - MNHN
                             </li>
                             <li>
                               <img src="img/20150911_122508.jpg" width="200" height="550" />
@@ -109,7 +109,7 @@
                             </li>
                              <li>
                               <img src="img/livre_patrickpaillet.jpg" width="200" height="550"  />
-                            © J.C Domenach
+                            © Jean-Christophe Domenech - MNHN
                             </li>
                         </ul>
                     </div>
