--- a/collections.html
+++ b/collections.html
@@ -113,15 +113,15 @@
                         <ul class="slides">
                             <li>
                               <img src="img/2013-5-37 2.jpg" width="200" height="550">
-                              Masque du Vanuatu © J.C Domenach
+                              Masque du Vanuatu © Jean-Christophe Domenech - MNHN
                             </li>
                             <li>
-                              <img src="img/ATT00000.jpg" width="200" height="550">
-                            © J.C Domenach
+                              <img src="img/laura2.jpg" width="200" height="550">
+                            © Jean-Christophe Domenech - MNHN
                             </li>
                              <li>
-                              <img src="img/KorriganeATT00000.jpg" width="200" height="550" >
-                            © J.C Domenach
+                              <img src="img/tambour.jpg" width="200" height="350" >
+                            Tambour de bronze donation Maratier © Jean-Christophe Domenech - MNHN
                             </li>
 
                         </ul>
