--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         </div>
                         <div id= "intro">
                             <center><p> <font>La société des amis du Musée de l'Homme est une association reconnue d'utilité publique dont le but est d'aider le Musée de l'Homme en soutenant le travail de ses chercheurs, en contribuant à l'enrichissement de ses collections et en l'aidant à développer ses
- activités. L'association qui possède deux antennes régionales, l'une à Marseille, l'autre à Nantes ,organise pour ses membres des conférences, des visites et des voyages culturels. </font> </p>
+ activités. L'association qui possède deux antennes régionales, l'une à Marseille, l'autre à Nantes, organise pour ses membres des conférences, des visites et des voyages culturels. </font> </p>
  </div>
 
                             </p> </center>
@@ -137,7 +137,7 @@
 
             <div class="start">
                 <p>Rejoignez-nous dés maintenant ! </p>
-                <a href="PDF/Test_doc.pdf">Adhérez </a>
+                <a href="PDF/adhesionSAMH.pdf">Adhérez </a>
             </div>
         </div>
     </div>
