--- a/tarifs.html
+++ b/tarifs.html
@@ -251,7 +251,7 @@
     <!-- Bulletin  -->
     <div class="start">
                 <p>Rejoignez-nous dés maintenant ! </p>
-                <a href="PDF/Test_doc.pdf">Bulletin d'inscription</a>
+                <a href="PDF/adhesionSAMH.pdf">Bulletin d'inscription</a>
             </div>
         </div>
     </div>
