--- a/soutien.html
+++ b/soutien.html
@@ -93,16 +93,16 @@
                     <div class="flexslider">
                         <ul class="slides">
                            <li>
-                              <img src="img/korrigane1.png" width="220" height="550">
-                              © J.C Domenach
+                              <img src="img/ATT00000.jpg" width="220" height="550">
+                              © Jean-Christophe Domenech - MNHN
                             </li>
                             <li>
                               <img src="img/origines.jpg" width="200" height="550">
-                              © J.C Domenach
+                              © Jean-Christophe Domenech - MNHN
                             </li>
                             <li>
                               <img src="img/KorriganeATT00000.jpg" width="200" height="550">
-                              © J.C Domenach
+                              © Jean-Christophe Domenech - MNHN
                             </li>
                         </ul>
                     </div>
