maj dimanche soir

--- a/avantages.html
+++ b/avantages.html
@@ -144,14 +144,14 @@
                     <div class="feature">
                         <div class="img_box">
                             <a href="#">
-                                <img src="img/prix2014LG.jpeg" class="img-responsive">
+                                <img src="img/bateau.png" class="img-responsive">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
                         </div>
                         <div class="text">
-                            <h6>Hermine Xhauflair © J.C Domenach </h6>
+                            <h6>Legende © Vincent Timothée </h6>
                             <p>
                                 </p>
                         </div>
@@ -168,7 +168,7 @@
                             </a>
                         </div>
                         <div class="text">
-                            <h6>Palmyre, Vincent Timothée. © Vincent Timothée</h6>
+                            <h6>Palmyre, temple de Baal. © Alix Martin</h6>
                             <p></p>
                         </div>
                     </div>
@@ -181,7 +181,7 @@
     <!-- Bulletin  -->
     <div class="start">
                 <p>Rejoignez-nous dés maintenant ! </p>
-                <a href="PDF/Test_doc.pdf">Bulletin d'inscription</a>
+                <a href="PDF/adhesionSAMH.pdf">Bulletin d'inscription</a>
             </div>
         </div>
     </div>
