--- a/dons.html
+++ b/dons.html
@@ -99,7 +99,7 @@
                             </a>
                         </div>
                          <div class="text">
-                            <h6>Dalle Saharienne, collection Maratier. <br>© Daniel Ponsart </h6>
+                            <h6>Dalle Saharienne, collection Maratier. <br>© Daniel Ponsart MNHN </h6>
                             <p></p>
                         </div>
 
@@ -116,7 +116,7 @@
                             </a>
                         </div>
                           <div class="text">
-                            <h6>Renard-Volant, Vanuatu. <br>© J.C Domenach </h6>
+                            <h6>Renard-Volant, Vanuatu. <br>© Jean-Christophe Domenech MNHN </h6>
                             <p></p>
                         </div>
 
@@ -133,7 +133,7 @@
                             </a>
                         </div>
                           <div class="text">
-                            <h6>Coiffe de guerrier d'Amérique du Nord. <br>© J.C Domenach</h6>
+                            <h6>Coiffe de guerrier d'Amérique du Nord, donation Bonneau <br>© J.C Domenech MNHN</h6>
                             <p></p>
                         </div>
 
@@ -205,7 +205,7 @@ de ses chercheurs , frais de mission ou édition d'ouvrages. Votre générosité
                             </a>
                         </div>
                           <div class="text">
-                            <h6>Autel funéraire, Ming. Collection Bommeau. <br>© J.C Domenach </h6>
+                            <h6>Autel funéraire Ming. <br>© J.C Domenech MNHN </h6>
                             <p></p>
                         </div>
 
@@ -214,15 +214,15 @@ de ses chercheurs , frais de mission ou édition d'ouvrages. Votre générosité
                 <div class="col-sm-4">
                     <div class="feature">
                         <div class="img_box">
-                            <a href="img/33-139-11.JPG">
-                                <img src="img/33-139-11.JPG" width="290" height="190">
+                            <a href="img/peruvienne.png">
+                                <img src="img/peruvienne.png" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
                         </div>
                           <div class="text">
-                            <h6> . Collection Temple. <br>© J.C Domenach </h6>
+                            <h6> Gaze péruvienne, donation Temple. <br>© J.C Domenech MNHN </h6>
                             <p></p>
                         </div>
 
@@ -239,7 +239,7 @@ de ses chercheurs , frais de mission ou édition d'ouvrages. Votre générosité
                             </a>
                         </div>
                           <div class="text">
-                            <h6>Bracelet Berbère, collection Boland. <br>© J.C Domenach </h6>
+                            <h6>Bracelet Berbère, collection Baland. <br>© J.C Domenech MNHN </h6>
                             <p></p>
                         </div>
 
