--- a/nantes.html
+++ b/nantes.html
@@ -90,7 +90,7 @@
                         </div>
                         <div class="text">
                             <h6></h6>
-                            <p><b>Conférence d'Yves Coppens sur le peuplement de la Terre.</b></p> <p>© J.C Domenach </p>
+                            <p><b>Conférence d'Yves Coppens.</b></p> <p>© Patrice Morette-Bourny </p>
                         </div>
 
                     </div>
