--- a/organisation.html
+++ b/organisation.html
@@ -112,7 +112,7 @@
     <div id="process">
         <div class="container">
             <div class="section_header">
-                <h3> 2 Antennes </h3>
+                <h3> Antennes </h3>
             </div>
             <p>
                             L'association compte 2 antennes, l'antenne <b>Méditerranée</b> à Marseille et l'antenne <b>Océanique</b> à Nantes.<b> Cliquez-ci dessous</b> pour obtenir plus d'informations. Le siège de la socièté des amis se trouve au <B> 17 place du Trocadero 75116 PARIS. </B></p>
