--- a/paris.html
+++ b/paris.html
@@ -108,7 +108,7 @@
                         </div>
                         <div class="text">
                             <h6></h6>
-                            <p><b>Grotte de PakOu au Laos</b></p> <p>© Vincent Timothée</p>
+                            <p><b>Grotte de Pakou au Laos</b></p> <p>© Vincent Timothée</p>
                         </div>
 
                     </div>
@@ -156,12 +156,13 @@ même temps le règlement de votre inscription</p>
                 <div class="col-sm-10 description_wrapper">
                     <h5>Voyages</h5>
                     <p>
-                     <b>Dans la première quinzaine d'avril 2016</b> : L'IRAN.<br>
+                     <b>Du 10 au 15 mai : </b> les villes hanséatiques. <br>
                       <b>Du 20 au 22 mai 2016 : </b> TAUTAVEL ET SA REGION avec Anne-Marie MOIGNE,
 maître de conférences au MNHN. <br>
                       <b>Les 4 et 5 juin 2016 </b> : L'ARDECHE avec des visites du fac similé de la
 grotte Chauvet et du site d'ORGNA. <br>
-<b>Du 19 au 24 septembre 2016  </b> : LES VILLES HANSEATIQUES. <br>
+ <b>Du 4 au 15 novembre : </b> l'Iran. <br>
+
 </p>
 
             </div>
@@ -184,7 +185,7 @@ Branly.
 </b> Visite guidée par Christian COIFFIER, ancien maître de conférences
 au Musée de l'Homme , attaché au Muséum national d'histoire naturelle ,
 participation aux frais : 10 euros.<br>
- <b> Mardi 1 décembre à 16 heures : l'HOTEL D'ESTREES.
+ <b> Mardi 8 décembre à 16 heures : l'HOTEL D'ESTREES.
 </b> résidence de l'Ambassadeur de la fédération de Russie , participation aux frais 10 euros.
                         </p>
                         <br>
@@ -227,11 +228,7 @@ Pour plus de renseignements, consultez les sites <a href="http://www.mnhn.fr/fr"
                 <div class="col-sm-10 description_wrapper">
                     <h5>Conférences</h5>
                     <p>
-                        Des conférences/projections organisées en partenariat avec le <b>Musée de l'Homme.</b><br>
-                        Des rendez-vous avec les chercheurs du <b>Museum d'Histoire Naturelle.</b><br>
-
-              Demander le <b>programme</b> auprès du secrétariat de la Société des Amis par :
-e-mail : samh@mnhn.fr  ou téléphone : <br> 01 47 04 62 10. </p>
+                         Les conférences organisées en partenariat avec le musée de l'Homme reprendront en <b>janvier 2016</b> </p>
                 </div>
             </div>
         </div>
