--- a/marseille.html
+++ b/marseille.html
@@ -90,7 +90,7 @@
                         </div>
                         <div class="text">
                             <h6></h6>
-                            <p><b>Lac Onéga, Russie.</b></p> <p>© Alix Martin</p>
+                            <p><b>Klji, lac Onéga, Russie. </b></p> <p>© Alix Martin</p>
                         </div>
 
                     </div>
@@ -123,7 +123,7 @@
                         </div>
                         <div class="text">
                             <h6></h6>
-                    <p><b>Zvartnots, Arménie. </b></p> <p>© Alix Martin</p>
+                    <p><b>Zvartnos, Arménie. </b></p> <p>© Alix Martin</p>
                         </div>
 
                     </div>
