--- a/tarifs.html
+++ b/tarifs.html
@@ -198,7 +198,7 @@
 <div id="faq">
         <div class="container">
             <div class="section_header">
-                <h3>Les avantages de nos membres</h3>
+                <h3>Les avantages donnés à nos membres</h3>
             </div>
 
             <div class="row">
