--- a/avantages.html
+++ b/avantages.html
@@ -38,7 +38,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Missions <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="aide.html">Aide aux chercheurs</a></li>
-                            <li><a href="collections.html">Enrichissements des collections</a></li>
+                            <li><a href="collections.html">Enrichissement des collections</a></li>
                             <li><a href="soutien.html">Soutien aux activités</a></li>
                         </ul>
 
@@ -144,14 +144,14 @@
                     <div class="feature">
                         <div class="img_box">
                             <a href="#">
-                                <img src="img/bateau.png" class="img-responsive">
+                                <img src="img/cuba.png" class="img-responsive">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
                         </div>
                         <div class="text">
-                            <h6>Legende © Vincent Timothée </h6>
+                            <h6>Remédios, Cuba. © Vincent Timothée </h6>
                             <p>
                                 </p>
                         </div>
