--- a/collections.html
+++ b/collections.html
@@ -45,7 +45,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Missions <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="aide.html">Aide aux chercheurs</a></li>
-                            <li><a href="collections.html">Enrichissements des collections</a></li>
+                            <li><a href="collections.html">Enrichissement des collections</a></li>
                             <li><a href="soutien.html">Soutien aux activités</a></li>
                         </ul>
 
