--- a/dons.html
+++ b/dons.html
@@ -38,7 +38,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Missions <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="aide.html">Aide aux chercheurs</a></li>
-                            <li><a href="collections.html">Enrichissements des collections</a></li>
+                            <li><a href="collections.html">Enrichissement des collections</a></li>
                             <li><a href="soutien.html">Soutien aux activités</a></li>
                         </ul>
 
@@ -133,7 +133,7 @@
                             </a>
                         </div>
                           <div class="text">
-                            <h6>Coiffe de guerrier d'Amérique du Nord, donation Bonneau <br>© J.C Domenech MNHN</h6>
+                            <h6>Coiffe de guerrier d'Amérique du Nord, donation Bonneau <br>© Jean-Christophe Domenech MNHN</h6>
                             <p></p>
                         </div>
 
