--- a/organisation.html
+++ b/organisation.html
@@ -39,7 +39,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Missions <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="aide.html">Aide aux chercheurs</a></li>
-                            <li><a href="collections.html">Enrichissements des collections</a></li>
+                            <li><a href="collections.html">Enrichissement des collections</a></li>
                             <li><a href="soutien.html">Soutien aux activités</a></li>
                         </ul>
 
@@ -131,7 +131,7 @@
                     <div class="text">
                         <h4>Méditerranée</h4>
                         <p>
-                            (Marseille) Présidée par Alix Martin. Adresse : 48 boulevard Hugues 13012 MARSEILLE Tél. 04 91 342 512 Courriel : samh.med13@orange.fr </p>
+                            (Marseille) Présidée par Alix Martin. Secrétaire générale : Francine Barbier. Adresse : 48 boulevard Hugues 13012 MARSEILLE Tél. 04 91 342 512 Courriel : samh.med13@orange.fr </p>
                     </div>
                     <div class="text">
                         <h4>Océanique</h4>
