--- a/paris.html
+++ b/paris.html
@@ -40,7 +40,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Missions <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="aide.html">Aide aux chercheurs</a></li>
-                            <li><a href="collections.html">Enrichissements des collections</a></li>
+                            <li><a href="collections.html">Enrichissement des collections</a></li>
                             <li><a href="soutien.html">Soutien aux activités</a></li>
                         </ul>
 
@@ -185,7 +185,7 @@ Branly.
 </b> Visite guidée par Christian COIFFIER, ancien maître de conférences
 au Musée de l'Homme , attaché au Muséum national d'histoire naturelle ,
 participation aux frais : 10 euros.<br>
- <b> Mardi 8 décembre à 16 heures : l'HOTEL D'ESTREES.
+ <b> Mardi 8 décembre à 16h30 heures : l'HOTEL D'ESTREES.
 </b> résidence de l'Ambassadeur de la fédération de Russie , participation aux frais 10 euros.
                         </p>
                         <br>
