--- a/paris.html
+++ b/paris.html
@@ -185,7 +185,7 @@ Branly.
 </b> Visite guidée par Christian COIFFIER, ancien maître de conférences
 au Musée de l'Homme , attaché au Muséum national d'histoire naturelle ,
 participation aux frais : 10 euros.<br>
- <b> Mardi 8 décembre à 16h30 heures : l'HOTEL D'ESTREES.
+ <b> Mardi 8 décembre à 16h30 heure : l'HOTEL D'ESTREES.
 </b> résidence de l'Ambassadeur de la fédération de Russie , participation aux frais 10 euros.
                         </p>
                         <br>
