maj 30 dec starbucks

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     </div>
                     <div class="row copyright">
                         <div class="col-md-12">
-                            © 2015 Société des Amis du Musée de l'Homme. Tous droits réservés. Réalisé par David Wise.
+                            © 2015 Société des Amis du Musée de l'Homme. Tous droits réservés. Réalisé par David Wise<a href="http://www.davidwise.fr/">.</a>
                         </div>
                     </div>
                 </div>
